cod-tools (unreleased)

  * ...

cod-tools (3.0.1)

  * Added:
    - dependencies for Fedora 32.
  * Fixed:
    - dic2markdown:
      - updated the script to properly process DDLm dictionary save frames
        that do not contain an explicit definition class.
  * Removed:
    - dependencies:
      - Carp::Assert as a run and build dependency.

cod-tools (3.0.0)

  * Changed:
    - cif2cod:
      - header with field names is printed by default for CSV output format.
    - cif2xyz:
      - proper XYZ format with a header is produced by default.
    - cif_fix_values:
      - CIF dictionary handling interface has been changed to match the interface
        of the cif_validate script. The '--dictionaries' option has been replaced
        with the '--dictionary' and the '--add-dictionaries' option with the
        '--add-dictionary' option.
    - cif_parse:
      - the output format from the one produced by the COD::ShowStruct
        module to the one produced by the Data::Dumper module;
      - merged in the cif_printout script.
    - cif_select:
      - replaced colon (':') with double dash ('--') in messages.
    - cif_split and cif_split_primitive:
      - modified the scripts to print extracted file names
        to STDOUT instead of STDERR.
    - cif_validate:
      - validation messages are now output to STDOUT instead of STDERR.
    - COD::CIF::Data::CIF2COD, cif2cod and cif2rdf:
      - replaced values from @default_data_fields with values from
        @new_data_fields; removed @new_data_fields. As a result, cif2cod and
        cif2rdf now outputs columns of the "new" COD 'data' table schema.
    - COD::CIF::Data::SymmetryGenerator:
      - removed 'f2o' parameter from the interface of symop_generate_atoms().
    - COD::CIF::Parser::Yapp:
      - updated the parser to use the COD::CIF::Tags::Manage::new_datablock()
        subroutine in order to ensure the structure of each generated CIF
        data block structure.
    - COD::CIF::Tags::Manage: