@@ -1,0 +1,126 @@
+$VAR1 = [
+          [
+            16,
+            16,
+            16,
+            16,
+            16,
+            16
+          ],
+          [
+            15,
+            15,
+            15,
+            15,
+            15,
+            15
+          ],
+          [
+            12,
+            15,
+            16,
+            17
+          ],
+          [
+            4,
+            5,
+            14
+          ],
+          [
+            3
+          ],
+          [
+            3,
+            6,
+            7
+          ],
+          [
+            5
+          ],
+          [
+            5,
+            8,
+            12
+          ],
+          [
+            7,
+            9,
+            10
+          ],
+          [
+            8
+          ],
+          [
+            8,
+            11,
+            14
+          ],
+          [
+            10
+          ],
+          [
+            2,
+            7,
+            13,
+            19
+          ],
+          [
+            12
+          ],
+          [
+            3,
+            10
+          ],
+          [
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            2
+          ],
+          [
+            0,
+            0,
+            0,
+            0,
+            0,
+            0,
+            2
+          ],
+          [
+            2,
+            18
+          ],
+          [
+            17
+          ],
+          [
+            12,
+            20
+          ],
+          [
+            19
+          ],
+          [
+            22,
+            23
+          ],
+          [
+            21
+          ],
+          [
+            21
+          ],
+          [
+            25,
+            26
+          ],
+          [
+            24
+          ],
+          [
+            24
+          ]
+        ];
