@@ -1,6 +1,8 @@
 cod-tools (unreleased)
 
-  * ...
+  * Added:
+    - COD::AtomNeighbours:
+      - the neighbour_list_from_cif() subroutine.
 
 cod-tools (3.0.1)
 
